--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/three": "^10.0.1",
+    "@react-three/fiber": "^9.3.0",
+    "@shadergradient/react": "^2.1.3",
     "@supabase/supabase-js": "^2.50.3",
     "axios": "^1.11.0",
+    "clsx": "^2.1.1",
     "express": "^5.1.0",
     "lenis": "^1.3.8",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.12",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
@@ -21,6 +26,8 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.3.1",
+    "three": "^0.179.1",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
